@@ -1218,10 +1218,10 @@ public abstract class BasicLookAndFeel extends LookAndFeel
         "ctrl UP", "requestFocus",
         "ctrl KP_UP", "requestFocus"
       }),
-      "TabbedPane.background", new ColorUIResource(light),
+      "TabbedPane.background", new ColorUIResource(192, 192, 192),
       "TabbedPane.contentBorderInsets", new InsetsUIResource(2, 2, 3, 3),
-      "TabbedPane.darkShadow", new ColorUIResource(shadow),
-      "TabbedPane.focus", new ColorUIResource(darkShadow),
+      "TabbedPane.darkShadow", new ColorUIResource(Color.black),
+      "TabbedPane.focus", new ColorUIResource(Color.black),
       "TabbedPane.focusInputMap", new UIDefaults.LazyInputMap(new Object[] {
             KeyStroke.getKeyStroke("ctrl DOWN"), "requestFocusForVisibleComponent",
             KeyStroke.getKeyStroke("KP_UP"), "navigateUp",
@@ -1235,17 +1235,16 @@ public abstract class BasicLookAndFeel extends LookAndFeel
             KeyStroke.getKeyStroke("DOWN"), "navigateDown"
       }),
       "TabbedPane.font", new FontUIResource("Dialog", Font.PLAIN, 12),
-      "TabbedPane.foreground", new ColorUIResource(darkShadow),
-      "TabbedPane.highlight", new ColorUIResource(highLight),
-      "TabbedPane.light", new ColorUIResource(highLight),
+      "TabbedPane.foreground", new ColorUIResource(Color.black),
+      "TabbedPane.highlight", new ColorUIResource(Color.white),
+      "TabbedPane.light", new ColorUIResource(192, 192, 192),
       "TabbedPane.selectedTabPadInsets", new InsetsUIResource(2, 2, 2, 1),
-      "TabbedPane.shadow", new ColorUIResource(shadow),
-      "TabbedPane.tabbedPaneContentBorderInsets", new InsetsUIResource(3, 2, 1, 2),
-      "TabbedPane.tabbedPaneTabPadInsets", new InsetsUIResource(1, 1, 1, 1),
+      "TabbedPane.shadow", new ColorUIResource(128, 128, 128),
       "TabbedPane.tabsOpaque", Boolean.TRUE,
       "TabbedPane.tabAreaInsets", new InsetsUIResource(3, 2, 0, 2),
       "TabbedPane.tabInsets", new InsetsUIResource(0, 4, 1, 4),
       "TabbedPane.tabRunOverlay", new Integer(2),
+      "TabbedPane.tabsOverlapBorder", Boolean.FALSE,
       "TabbedPane.textIconGap", new Integer(4),
       "Table.ancestorInputMap", new UIDefaults.LazyInputMap(new Object[] {
         "ctrl DOWN", "selectNextRowChangeLead",
